# financial_ai_copilot

./: LICENSE  README.md
agentic-ui/: README.md  package-lock.json  package.json
agentic-ui/src/app/: globals.css  page.tsx
agentic-ui/src/app/components/: ChatInterface.tsx  ChatMessage.tsx  ConfigDialog.tsx  DatasetUpload.tsx  FileUpload.tsx  ModelComparisonChart.tsx  ScriptExecutionBlock.tsx  TerminalPanel.tsx  ThinkingBlock.tsx  ToolCallBox.tsx  UserGuideDialog.tsx  ZganMonitorPanel.tsx
agentic-ui/src/app/components/genui/: ArtifactsPanel.tsx  DatasetCharts.tsx  DatasetSummary.tsx  FindingCard.tsx  FraudRingAlert.tsx  ModelLeaderboard.tsx  PipelineProgress.tsx  index.ts
agentic-ui/src/app/hooks/: useChat.ts  useFinancialCopilot.tsx  useThreads.ts  useZganMonitor.ts
agentic-ui/src/app/ml-api/[...path]/: route.ts
agentic-ui/src/app/utils/: mlApi.ts  mlConfig.ts  utils.ts
agentic-ui/src/lib/: config.ts
agentic-ui/src/providers/: ClientProvider.tsx
ai_agent/: .dockerignore  .env.example  .gitignore  .mcp.json  Deployment.md  Dockerfile  README.md  agent.py  langgraph.json  pyproject.toml  requirements.txt  start.sh  terminal_server.py
ai_agent/.deepagents/: AGENTS.md
ai_agent/.deepagents/skills/credit-scoring-pipeline/: 01_eda.py  02_preprocessing.py  03_feature_engineering.py  04_baseline_model.py  05_error_analysis.py  06_iterative_training.py  07_export_artifacts.py  SKILL.md  _pipeline_io.py
ai_agent/.deepagents/skills/fraud-detection-pipeline/: 01_eda.py  02_anomaly_detection.py  03_graph_analysis.py  04_feature_engineering.py  05_model_training.py  06_rule_generation.py  SKILL.md  _pipeline_io.py
ai_agent/.deepagents/skills/mongodb-memory/: SKILL.md
ai_agent/ai_agent/: __init__.py  sandbox.py
ai_agent/backend/: Dockerfile  README.md  database.py  deepagents_api.json  endpoints.md  graphs.py  main.py  models.py  pyproject.toml  run_manager.py  status.md  streaming.py
ai_agent/backend/routers/: assistants.py  runs.py  stateless.py  store.py  system.py  threads.py
ai_agent/fin_agent/: __init__.py  datasets.py  memory.py  middleware.py  prompts.py  sandbox.py  state.py  tools.py
