[project]
name = "financial-ai-copilot"
version = "0.1.0"
description = "Autonomous Financial AI Data Scientist Copilot — credit scoring, fraud detection, risk analysis"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "deepagents>=0.4.5",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    # LLM / LangChain
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    # MongoDB (agent memory + GridFS + checkpointer)
    "pymongo[srv]>=4.7.0",
    "motor>=3.4.0",
    "langgraph-checkpoint-mongodb>=0.1.0",
    # E2B sandbox (optional — falls back to local subprocess)
    "e2b-code-interpreter>=1.0.0",
    # Financial ML stack (used by pipeline scripts in .deepagents/skills/)
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "optuna>=3.6.0",
    "shap>=0.45.0",
    "pyarrow>=15.0.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    # Anomaly detection / graph analysis
    "pyod>=1.1.0",
    "networkx>=3.3",
    # Drift / validation
    "evidently>=0.4.0",
    # Utilities
    "httpx>=0.27.0",
    "markdownify>=0.12.0",
    "scipy>=1.11.0",
    # bson is bundled with pymongo — no separate install needed
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_agent"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

